<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="310dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="Autofill,UnusedAttribute,LabelFor">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ip"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ctr_ip"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="3"
                android:gravity="center"
                android:text = "@string/control"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text = "@string/present"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

       <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/measurement"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ctr_measure"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

           <TextView
               android:id="@+id/str_measure"
               android:layout_width="0dp"
               android:layout_height="50dp"
               android:layout_weight="1"
               android:gravity="center"
               android:textColor="#000000"
               android:textSize="18sp" />

       </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/process"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ctr_process"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/str_process"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/variable"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ctr_variable"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="text"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/str_variable"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/turn_on"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ctr_on_than"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />


            <EditText
                android:id="@+id/ctr_on_parameter"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/str_parameter"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="5"
                android:gravity="center"
                android:text="@string/turn_off"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ctr_off_than"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="3"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ctr_off_parameter"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="4"
                android:gravity="center"
                android:inputType="phone"
                android:textColor="#000000"
                android:textSize="18sp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="4"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="18sp" />

        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/device_status"
        android:textColor="#000000"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/ctr_status"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/status_test"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/ctr_run"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp"
        tools:ignore="SpeakableTextPresentCheck" />

</LinearLayout>
